[package]
name = "zest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.16.0"
lazy_static = "1.4.0"
pulldown-cmark = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.20"
xdg = "2.2.0"
clap = "2.33.3"
simple_logger = "1.13.0"
log = "0.4.14"
walkdir = "2.3.2"
