[package]
name = "zest-cli"
version = "0.1.2"
edition = "2018"
license = "Apache-2.0"
description = "A personal note management tool"
homepage = "https://github.com/vigoux/zest"
repository = "https://github.com/vigoux/zest"
keywords = [ "zettelkasten", "notes" ]
categories = [ "command-line-utilities" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = "zest"

[dependencies]
tantivy = "^0.17.0"
lazy_static = "1.4.0"
pulldown-cmark = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.20"
xdg = "2.2.0"
log = "0.4.0"
env_logger = "0.8.4"
walkdir = "2.3.2"
dot = { version = "0.1.4", optional = true }

[features]
default = ['graph']
graph = ['dot']

[dependencies.clap]
version = "2.33.3"
default-features = false

features = [ "color", "suggestions" ]
